fix: Cambiar ruta getAllBooks de / a /all para evitar conflictos
- Cambio de GET /api/books/ a GET /api/books/all
- Evita conflicto con POST /api/books/ (createBook)
- Actualizada herramienta de verificación

--- a/front/public/production-verification.html
+++ b/front/public/production-verification.html
@@ -322,7 +322,7 @@
             log('📚 Iniciando test de API resoluciones...');
             
             try {
-                const response = await fetch(`${BACKEND_URL}/api/books`, {
+                const response = await fetch(`${BACKEND_URL}/api/books/all`, {
                     method: 'GET',
                     headers: {
                         'Content-Type': 'application/json'
